2007-12-21  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/blas.h, itpp/base/vec.h: Fix wrong zdotu_ calling
	convention on Debian amd64

	This patch promotes the calling convention of BLAS zdotu_ function
	that returns its result through the first function argument. This
	is the default method used by older GCC Fortran
	compiler (version 3).

	On Debian amd64, the configure-time detection of the proper
	calling convention results in both methods working. However, the
	method that returns the complex result by value, like standard
	C/C++ functions, causes failures of blas_test and vec_test.

	This patch fixes bug report [1855481].

2007-12-17  Adam Piatyszek  <ediap@users.sourceforge.net>

	* doc/local/linking.doc: Cosmetic documentation fixes

------------------------------------------------------------------------------

2007-12-15  Adam Piatyszek  <ediap@users.sourceforge.net>

	* IT++ 4.0.1 released (SVN tag: release-4-0-1)

	* NEWS: Release notes for IT++ 4.0.1 added

2007-12-13  Adam Piatyszek  <ediap@users.sourceforge.net>

	* doc/Makefile.am, doc/tutorial/src/Makefile.am: Build tutorial
	examples when doing "make check"

	Compile and link time incompatibilities between the library
	interfaces and tutorial example programs should now be detected
	during the standard check procedure.

	* doc/local/installation.doc, doc/local/linking.doc: Documentation
	updated to reflect changes in MSVC++ project files

	* win32/itpp_acml.vcproj, win32/itpp_acml_tests/*.vcproj,
	win32/itpp_mkl.vcproj, win32/itpp_mkl_tests/*.vcproj: Replace
	explicit paths with LIB and INCLUDE environment variables

	With this change the user is responsible for setting the LIB and
	INCLUDE environment variables with proper directories to MKL or
	ACML librarary and include files.

	Besides, build multi-threaded DLL libraries by default.

	* itpp/base/binfile.cpp, itpp/base/copy_vector.h: Include missing
	header files to fix compilation using GCC 4.3
